[tool.poetry]
name = "teteu"
version = "0.1.0"
description = "trabalho de prog com poetry"
authors = ["Math3usD <matheusdmrosa@mgmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
white = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
